--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "editor.fontFamily": "Gopher Mono, Menlo, Comic Mono, Monoid, Monofur For Powerline, Iosevka, Meslo LG L DZ, Meslo LG M DZ, Maple Mono, Fira Code, New Heterodox Mono A, Monoisome, Twilio Sans Mono, Sometype Mono, Iosevka SS16, Brutalist Mono, PT Mono, Red Hat Mono, Lilex, Jetbrains Mono NL, Inconsolata-dz For Powerline",
+  "editor.fontFamily": "Gopher Mono, Menlo, Comic Mono, Fira Code, SourceCodeVF, Iosevka Custom, Monoid, Monaco, Meslo LG L DZ, Monofur For Powerline, Meslo LG M DZ, Maple Mono, New Heterodox Mono A, Monoisome, Twilio Sans Mono, Sometype Mono, Brutalist Mono, PT Mono, Red Hat Mono, Lilex, Jetbrains Mono NL, Inconsolata-dz For Powerline",
   "editor.tabSize": 8,
   "editor.detectIndentation": false,
   "editor.trimAutoWhitespace": true,
@@ -163,14 +163,14 @@
     "[Iceberg Light]": {
       "comments": "#00959d"
     },
-    "[Mauve (rainglow)]": {
-      "comments": "#00959d"
-    },
     "[Solarized Light]": {
       "comments": "#0c6ef7"
     },
     "[hackage-theme]": {
       "comments": "#00959d"
+    },
+    "[Solarized Dark+]": {
+      "comments": "#AAAAF0"
     },
     "[paddy-citadel]": {
       "comments": "#00959d"
@@ -365,16 +365,16 @@
       "backgroundColor": "rgba(0.5, 0.5, 0.1, 1.0)",
       "bold": false,
       "italic": false
-    },
-//     {
-//       "tag": "*",
-//       "color": "#98C379",
-//       "strikethrough": false,
-//       "underline": false,
-//       "backgroundColor": "transparent",
-//       "bold": false,
-//       "italic": false
-//     }
+    }
+    //     {
+    //       "tag": "*",
+    //       "color": "#98C379",
+    //       "strikethrough": false,
+    //       "underline": false,
+    //       "backgroundColor": "transparent",
+    //       "bold": false,
+    //       "italic": false
+    //     }
   ],
   "workbench.iconTheme": "catppuccin-frappe",
   //   "editor.scrollbar.verticalScrollbarSize": 5,
@@ -475,16 +475,23 @@
   "workbench.activityBar.visible": false,
   "[css]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-},
+  },
   "vim.handleKeys": {
     "<C-d>": true,
     "<C-s>": false,
     "<C-z>": false,
     "<C-a>": false,
     "<C-e>": false
-},
-"[html]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-},
+  },
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "background.fullscreen": {
+    "images": ["file:///Users/soumikrakshit/Library/Mobile Documents/com~apple~CloudDocs/tswift-slate.png"], // urls of your images
+    "opacity": 0.99, // 0.85 ~ 0.95 recommended
+    "size": "cover", // also css, `cover` to self-adaption (recommended)，or `contain`、`200px 200px`
+    "position": "center", // alias to `background-position`, default `center`
+    "interval": 0 // seconds of interval for carousel, default `0` to disabled.
+  },
 "workbench.colorTheme": "Slate (rainglow)"
 }
